--- a/imdb-clone/src/components/header.css
+++ b/imdb-clone/src/components/header.css
@@ -3,9 +3,10 @@ header {
  display: flex;
  align-items: center;
  justify-content: space-between;
- padding: 2.5rem 5rem;
+ padding: 3rem 5rem;
  background-color: var(--color-bg-variant);
  margin-bottom: 3rem;
+ border-bottom: solid var(--color-light) 2px;
 }
 
 .logo {
@@ -17,4 +18,16 @@ header {
  width: 20rem;
  border-radius: 5px;
  margin: 1rem;
+}
+
+.menuItem{
+ border: solid white 2px;
+ border-radius: 5px;
+ padding: 0.5rem;
+}
+
+.menuItem:hover {
+ background-color: var(--color-primary);
+ color:black;
+ border: none;
 }
